# pyhole

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/pyhole/: main.py
src/pyhole/classes/: local_dns.py
