[tool.poetry]
name = "pyhole"
version = "0.1.1"
description = "A Python library for interacting with PiHole DNS server through the REST API"
authors = ["Oliver Galbraith <olivergalbraith0@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/ollie-galbraith/pyhole"
repository = "https://github.com/ollie-galbraith/pyhole"
documentation = "https://github.com/ollie-galbraith/pyhole"

packages = [
    { include = "pyhole", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
restpylot = "^0.1.1"

[tool.poetry.group.devs.dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"